fix: bg on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,14 @@
     outline: none;
     cursor: pointer;
 }
+
+@media ((max-width: 900px) and (orientation: landscape)) or ((max-width: 450px) and (orientation: portrait)){
+    #root {
+        background: linear-gradient(rgba(0, 140, 149, 0.80), rgba(0, 140, 149, 0.80)), url('./assets/images/bg-mobile.png');
+        background-repeat: repeat, no-repeat;
+        background-size: cover;
+    }
+}
 @media screen and (orientation:portrait) {
     #root {
         background-position-x: 33%;
